<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mark_item_edit_popup"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jonasheinrich.www.marktracker.MarkItem.MarkItemEditPopupActivity"
    android:background="#EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Layout_Wrapper"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:text="@string/Title_EditAMarkItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDefaultTextColor"
            style="@style/LargeText"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"/>

        <TextView
            android:text="@string/Title_Mark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDefaultTextColor"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/SeekBar_Mark"
            android:layout_weight="1"/>

        <TextView
            android:text="@string/Title_ClassTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDefaultTextColor"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"/>

        <CheckBox
            android:text="@string/CheckBox_ClassTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDefaultTextColor"
            android:id="@+id/CheckBox_ClassTest" />
    </LinearLayout>

</RelativeLayout>
